<resources>
    <string name="app_name">OpenGM</string>

    <string name="loading_dialog">Loading. Please wait &#8230;.</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="incorrect_activity_login">Invalid username or password</string>
    <string name="incorrect_password">Invalid password</string>
    <string name="invalid_password_activity_login">Password has not a correct format</string>
    <string name="login_now_activity_login">Login</string>
    <string name="forgotten_password_activity_login"><u>Forgot your password?</u></string>
    <string name="register_now_activity_login">Don\'t have any account yet? Register now</string>

    <string name="continue_dialog_password">Reset my password</string>
    <string name="cancel_dialog_password">Cancel</string>
...
    <string name="error_edit_profile">Error while updating your informations</string>


    <string name="title_activity_register">Create an account</string>

    <string name="title_activity_my_groups">My Groups</string>
    <string name="noGroupsYet">No groups yet ? Click on the + button below to create one !</string>

    <string name="logoutWarning">Are you sure you want to logout ?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>

    <string name="hint_username_activity_register">Username</string>
...
    <string name="hint_lastname_activity_register">Last name</string>
    <string name="hint_phone_activity_register">Phone number</string>
    <string name="hint_email_activity_register">Email</string>
    <string name="hint_confirm_password_activity_register">Confirm password</string>
    <string name="sign_up_activity_register">Sign up</string>

    <string name="emtpy_username_activity_register">Username should not be empty</string>
    <string name="empty_password_activity_register">Password should not be empty</string>
    <string name="empty_email_activity_register">Email should not be empty</string>
    <string name="empty_firstname_activity_register">First name should not be empty</string>
    <string name="empty_lastname_activity_register">Last name should not be empty</string>
    <string name="incorrect_email_activity_register">Email has not a correct format</string>
    <string name="non_matching_passwords_activity_register">Passwords don\'t match</string>
    <string name="incorrect_phone_number_activity_register">A valid phone number should be entered</string>
...

    <string name="title_activity_members">Members</string>
    <string name="title_members_select_mode">Select</string>
    <string name="members_hint">Type mail address&#8230;</string>
    <string name="members_text">Add new member</string>
    <string name="invite">Invite</string>
    <string name="action_add_person">Add member</string>
    <string name="action_remove_person">Remove member</string>
    <string name="action_change_roles">Change roles</string>
    <string name="dialog_add_member_title">Add a member</string>
    <string name="dialog_add_member_text">Enter username or email:</string>
    <string name="add">Add</string>

    <string name="title_activity_modify_group">ModifyGroup</string>
    <string name="modify_group_add">Add members</string>
    <string name="modify_group_roles">Create new roles</string>

    <string name="CreateEditEarlyDate">Invalide date (already past)</string>
...
