<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.opengm.groups.MembersActivity">

    <ListView
        android:id="@+id/member_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
