<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_add_member_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_member_title"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/dialog_add_member_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_add_member_title"
        android:text="@string/dialog_add_member_text"
        android:textIsSelectable="false"
        android:gravity="center" />

    <EditText
        android:id="@+id/dialog_add_member_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_add_member_text"
        android:inputType="textEmailAddress"
        android:gravity="center" />

</RelativeLayout>