...
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:padding="15dp">

                <EditText
                    android:id="@+id/login_username"
                    style="@style/welcomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_white_24dp"
                    android:hint="@string/hint_username_activity_register"
                    android:inputType="textPersonName"
...
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_lock_white_24dp"
                    android:hint="@string/hint_password_activity_register"
                    android:inputType="textPassword"
                    android:lines="1"
...
                        android:onClick="onClickForgotPassword"
                        android:text="@string/forgotten_password_activity_login"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/login_buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.3"
                        android:background="@drawable/rounded_buttons"
                        android:onClick="onClickLogin"
...
